.golden/-8866962460351694124/golden

INITIALPATH:7:20: error:
    • No instance for (PyFToString Float) arising from a use of ‘toString’
    • In the second argument of ‘(.)’, namely ‘toString’
      In the expression: (PyF.Formatters.formatString (PyF.Internal.QQ.newPaddingKForString PyF.Internal.QQ.PaddingDefaultK)) Nothing . toString
      In the first argument of ‘putStrLn’, namely ‘(((PyF.Formatters.formatString (PyF.Internal.QQ.newPaddingKForString PyF.Internal.QQ.PaddingDefaultK)) Nothing . toString) number)’
  |
7 | main = putStrLn [f|{number:s}|]
  |                    ^^^^^^^^^^^^
